style.css
body {margin:0px;}
.logo img{
  float:left;
  width:40px;
  padding:0px;
  margin:0px;}
.nav{
    border:1px solid #ffffff;
    border-width:1px 0;
    list-style:none;
    margin:0;
    padding:15px;
    text-align:center;
    font-family: balsamiq sans;
    background-color: #ffffff;
    position: sticky;
    top:68px;
    z-index:50;
    box-shadow: 0px 1px 5px #aaaaaa;}
.nav li{
    display:inline;}
.nav a{
    display:inline-block;
    color: #38579E;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    border-bottom: 3px solid transparent;}
.nav a:hover {
  border-bottom: 3px solid #ECBD8F;
  color:#ECBD8F;}

